// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeaderWrapper snapshots default 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots navigation wrapping 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
  <ForwardRef>
    <a
      href="/tab1"
      key=".0/.$.$tab1"
    >
      Tab1
    </a>
    <a
      href="/tab2"
      key=".0/.$.$tab2"
    >
      Tab2
    </a>
  </ForwardRef>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots select + navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots select 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user + navigation + select 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user + navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;
